# CS50

./: .env  README.md  app.py  config.py  cs50 (1).sql  cs50.sql  env  flaskenv  gerar_codigo_verificacao_email.py  pyproject.toml  routes.py  socketio_setup.py  verify_page.py
CS50 final project/: requirements.txt
CS50 final project/Scripts python/: atualizar_btc.py  consultar_api.py  consultar_preco_btc.py
CS50 final project/app/: Dashboard.py  Deposit.py  Faq.py  My_Deposits.py
app/: app.py
app/controllers/: dashboard.py  get_crypto_data.py
app/models/: crypto_data.py  update_database.py
app/templates/: dashboard.html
controller/: Account.py  Dashboard.py  Deposit.py  Faq.py  Login.py  My_deposits.py  plot_creator.py
controller/private_pages/: Account.py  Dashboard.py  Deposit.py  Faq.py  Logout.py  My_deposits.py  Notifications.py  Upload_photo.py
controller/protected_pages/: get_crypto_data.py  plot_creator.py  set_user_data.py  translate.py  user_data.py
controller/public_pages/: Authenticate_account.py  Error.py  Login.py  Recover_password.py  Register.py  Resend_authentication_email.py  Teste.py
final-project/: Dashboard.py
final-project/controllers/: get_crypto_data.py  plot_creator.py
final-project/helper/: helper_insert.py  helper_select.py  helper_update.py
final-project/models/: crypto_data.py  update_database.py
helper/: generate_code.py  helper_delete.py  helper_insert.py  helper_select.py  helper_update.py  send_email.py  valitade.py
models/: Authenticate_account_user.py  Deposit_data.py  Get_notification.py  Login_user.py  User.py  crypto_data.py  dashboard_data.py  db_connection.py  register_user.py  update_criptocurrencies.py
src/finalProject/: app.py  config.py  context_processor.py  renderer.py  routes.py  socketio_setup.py  verify_page.py
stanrdar/: app.py  config.py  routes.py  socketio_setup.py
static/css/: dashboard.css  login.css  recover_password.css  register.css  style_account.css  style_dashboard.css  style_deposit.css  style_error.css  (+10 more)
templates/: account.html  dashboard.html  deposit.html  deposit_confirm.html  error.html  faq.html  index.html  login.html  modal_confirmation.html  modal_welcome.html  my_deposits.html  notifications.html  recover_password.html  register.html  resend_authentication_email.html  update_data.html  upload_photo.html  verify.html
tests/: dependencies.py  test.py
(+210 files in other folders)
